objects/Account_Repco__c.object
<CustomObject>
    <fields>
        <fullName>Account_Repco_Index_Number__c</fullName>
        <label>Account Repco Index Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Repcos</relationshipLabel>
        <relationshipName>Account_Repcos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Repco__c</fullName>
        <label>Repco</label>
        <referenceTo>Repco__c</referenceTo>
        <relationshipLabel>Account Repcos</relationshipLabel>
        <relationshipName>Account_Repcos</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Repco</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Account Repco</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IM00000008bgdMAA_00NM0000000P6yWMAS</fullName>
        <active>true</active>
        <field>Connection__c.Account_Repco__c</field>
        <filterItems>
            <field>Account_Repco__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Connection_Account Repco</name>
        <sourceObject>Connection__c</sourceObject>
    </namedFilters>
    <pluralLabel>Account Repcos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>